# Tony

./: .gitignore  ME_grants.csv  README.md
.github/workflows/: ci.yml
tony-core/: README.md  grant_dashboard.py  requirements.txt  setup.py
tony-core/baselines/: calibration_external_benchmark.csv  compliance_external_baseline_profile.json  compliance_profile_template.json  external_calibration_baseline.csv  external_compliance_controls.json
tony-core/docs/: SCORING_METHODOLOGY_v1.0.md
tony-core/tests/: conftest.py  test_calibration.py  test_cli.py  test_compliance.py  test_dashboard.py  test_evaluation.py  test_ingest.py  test_score.py
tony-core/tony/: __init__.py  calibration.py  cli.py  compliance.py  config.py  dashboard.py  default_config.json  evaluation.py  ingest.py  report.py  score.py  utils.py
tony-core/tony/templates/: dashboard.html
tony-env/: .gitignore  grant_management.py  test_grant_management.py
tony/tony/tony/src/tony/: glossary.py  report.py
tony/tony/tony/tony/: README.md  pyproject.toml
tony/tony/tony/tony/src/tony/: config.py  ledger.py  logging_setup.py  scoring.py  validators.py
