# TONY
Ego/stylization decay scoring via bounded proxies.

## Quickstart
tony --input data.json --output-format brief
tony --input data.json --config config.yaml --csv out.csv --log-level
# ----------------------------
# Create folder structure
# ----------------------------
$folders = @(
    "tony",
    "tony\src",
    "tony\src\tony",
    "tony\src\tony\core",
    "tony\tests",
    "tony\tests\fixtures"
)
foreach ($f in $folders) { New-Item -Path $f -ItemType Directory -Force | Out-Null }

# ----------------------------
# Create __init__.py files
# ----------------------------
New-Item -Path "tony\src\tony\__init__.py" -ItemType File -Force | Out-Null
New-Item -Path "tony\src\tony\core\__init__.py" -ItemType File -Force | Out-Null

# ----------------------------
# pyproject.toml
# ----------------------------
@'
[project]
name = "tony"
version = "0.1.0"
description = "TONY  a bias-resistant diagnostic lattice for ego/stylization decay scoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "rich>=13.7"]

[project.scripts]
tony = "tony.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
